feat: data augmentation finished

--- a/notebooks/model_1.ipynb
+++ b/notebooks/model_1.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "43c8c4ca-8de5-4591-85fc-a0733937ddbe",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-14T11:30:12.776622Z",
-     "start_time": "2024-11-14T11:30:12.774506Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -24,12 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "8c121b643a7ee534",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-14T11:30:13.172383Z",
-     "start_time": "2024-11-14T11:30:13.167825Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -90,333 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "id": "939a589026cf45bc",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-14T11:34:29.938951Z",
-     "start_time": "2024-11-14T11:34:29.901829Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(<tf.Tensor: shape=(32, 256, 256, 3), dtype=float32, numpy=\n",
-      "array([[[[208.5      , 176.5      , 154.5      ],\n",
-      "         [148.25     , 116.       ,  95.5      ],\n",
-      "         [239.5      , 208.5      , 178.       ],\n",
-      "         ...,\n",
-      "         [191.       , 166.       , 144.       ],\n",
-      "         [124.5      ,  99.5      ,  77.5      ],\n",
-      "         [173.75     , 148.75     , 126.75     ]],\n",
-      "\n",
-      "        [[218.75     , 187.75     , 157.75     ],\n",
-      "         [220.5      , 189.75     , 158.       ],\n",
-      "         [207.75     , 175.75     , 154.25     ],\n",
-      "         ...,\n",
-      "         [164.       , 140.       , 113.5      ],\n",
-      "         [187.       , 163.       , 136.       ],\n",
-      "         [203.25     , 179.25     , 152.25     ]],\n",
-      "\n",
-      "        [[229.5      , 197.5      , 172.5      ],\n",
-      "         [227.5      , 195.5      , 170.5      ],\n",
-      "         [214.       , 182.       , 157.       ],\n",
-      "         ...,\n",
-      "         [148.25     , 124.25     , 100.25     ],\n",
-      "         [204.75     , 180.75     , 156.75     ],\n",
-      "         [191.5      , 167.5      , 143.5      ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[159.       , 131.       , 110.       ],\n",
-      "         [189.25     , 161.25     , 137.25     ],\n",
-      "         [194.75     , 167.75     , 140.75     ],\n",
-      "         ...,\n",
-      "         [ 21.25     ,   6.25     ,   1.5      ],\n",
-      "         [ 61.5      ,  49.       ,  33.25     ],\n",
-      "         [ 52.5      ,  39.5      ,  27.       ]],\n",
-      "\n",
-      "        [[154.25     , 131.75     , 112.25     ],\n",
-      "         [175.       , 153.       , 129.5      ],\n",
-      "         [198.5      , 177.5      , 150.5      ],\n",
-      "         ...,\n",
-      "         [144.75     , 127.25     , 108.75     ],\n",
-      "         [207.       , 188.       , 164.       ],\n",
-      "         [252.5      , 232.25     , 205.75     ]],\n",
-      "\n",
-      "        [[180.75     , 159.25     , 133.75     ],\n",
-      "         [155.25     , 133.25     , 110.25     ],\n",
-      "         [143.75     , 121.5      , 101.25     ],\n",
-      "         ...,\n",
-      "         [247.5      , 219.       , 177.75     ],\n",
-      "         [123.75     ,  93.25     ,  74.25     ],\n",
-      "         [181.25     , 154.25     , 134.25     ]]],\n",
-      "\n",
-      "\n",
-      "       [[[165.75     , 167.75     , 179.75     ],\n",
-      "         [165.25     , 167.25     , 179.25     ],\n",
-      "         [175.5      , 177.5      , 189.5      ],\n",
-      "         ...,\n",
-      "         [ 97.       , 128.       , 185.       ],\n",
-      "         [ 86.25     , 117.25     , 174.25     ],\n",
-      "         [ 86.       , 117.       , 174.       ]],\n",
-      "\n",
-      "        [[172.25     , 174.25     , 186.25     ],\n",
-      "         [181.5      , 183.5      , 195.5      ],\n",
-      "         [173.5      , 175.5      , 187.5      ],\n",
-      "         ...,\n",
-      "         [ 87.5      , 118.5      , 175.5      ],\n",
-      "         [ 87.5      , 118.5      , 175.5      ],\n",
-      "         [ 85.       , 116.       , 173.       ]],\n",
-      "\n",
-      "        [[167.       , 171.       , 182.       ],\n",
-      "         [185.5      , 189.5      , 200.5      ],\n",
-      "         [164.5      , 168.5      , 179.5      ],\n",
-      "         ...,\n",
-      "         [ 86.25     , 117.25     , 174.25     ],\n",
-      "         [ 85.75     , 116.75     , 173.75     ],\n",
-      "         [ 86.5      , 117.5      , 174.5      ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[ 48.       ,  67.       , 107.       ],\n",
-      "         [ 47.75     ,  66.75     , 106.75     ],\n",
-      "         [ 48.       ,  67.       , 107.       ],\n",
-      "         ...,\n",
-      "         [125.5      , 135.5      , 170.5      ],\n",
-      "         [125.5      , 135.5      , 170.5      ],\n",
-      "         [129.       , 139.       , 174.       ]],\n",
-      "\n",
-      "        [[ 48.       ,  68.       , 105.       ],\n",
-      "         [ 47.5      ,  67.5      , 104.5      ],\n",
-      "         [ 49.5      ,  69.5      , 106.5      ],\n",
-      "         ...,\n",
-      "         [125.25     , 138.25     , 172.25     ],\n",
-      "         [125.75     , 138.75     , 172.75     ],\n",
-      "         [127.5      , 140.5      , 174.5      ]],\n",
-      "\n",
-      "        [[ 46.5      ,  66.5      , 103.5      ],\n",
-      "         [ 48.       ,  68.       , 105.       ],\n",
-      "         [ 47.       ,  67.       , 104.       ],\n",
-      "         ...,\n",
-      "         [125.5      , 137.       , 171.5      ],\n",
-      "         [126.5      , 139.5      , 173.5      ],\n",
-      "         [127.5      , 140.5      , 174.5      ]]],\n",
-      "\n",
-      "\n",
-      "       [[[137.5      , 107.5      ,  71.5      ],\n",
-      "         [131.       , 100.5      ,  68.       ],\n",
-      "         [127.5      ,  96.       ,  69.5      ],\n",
-      "         ...,\n",
-      "         [131.       , 103.       ,  89.       ],\n",
-      "         [129.5      , 104.5      ,  92.       ],\n",
-      "         [128.5      , 106.5      ,  93.5      ]],\n",
-      "\n",
-      "        [[126.       ,  95.       ,  65.       ],\n",
-      "         [129.5      ,  98.5      ,  69.5      ],\n",
-      "         [129.5      ,  98.5      ,  70.       ],\n",
-      "         ...,\n",
-      "         [126.5      , 104.5      ,  87.       ],\n",
-      "         [125.5      , 102.5      ,  87.5      ],\n",
-      "         [129.       , 105.5      ,  92.5      ]],\n",
-      "\n",
-      "        [[129.       ,  97.       ,  72.       ],\n",
-      "         [134.5      , 103.5      ,  75.5      ],\n",
-      "         [130.5      ,  99.5      ,  70.5      ],\n",
-      "         ...,\n",
-      "         [119.5      , 102.       ,  82.       ],\n",
-      "         [131.       , 106.5      ,  91.       ],\n",
-      "         [132.       , 105.       ,  92.5      ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[146.5      , 108.5      ,  85.5      ],\n",
-      "         [134.       ,  97.       ,  73.5      ],\n",
-      "         [143.       , 109.       ,  84.       ],\n",
-      "         ...,\n",
-      "         [156.       , 129.       , 112.       ],\n",
-      "         [158.       , 131.       , 114.       ],\n",
-      "         [151.       , 124.       , 107.       ]],\n",
-      "\n",
-      "        [[139.       , 102.       ,  76.       ],\n",
-      "         [144.       , 107.5      ,  81.5      ],\n",
-      "         [147.       , 113.       ,  86.       ],\n",
-      "         ...,\n",
-      "         [148.       , 121.       , 104.       ],\n",
-      "         [157.5      , 130.5      , 113.5      ],\n",
-      "         [151.5      , 124.5      , 107.5      ]],\n",
-      "\n",
-      "        [[144.       , 107.5      ,  77.       ],\n",
-      "         [146.       , 110.5      ,  79.5      ],\n",
-      "         [147.       , 114.       ,  82.       ],\n",
-      "         ...,\n",
-      "         [150.       , 123.       , 106.       ],\n",
-      "         [158.5      , 131.5      , 114.5      ],\n",
-      "         [159.       , 132.       , 115.       ]]],\n",
-      "\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "\n",
-      "       [[[193.25     , 176.       , 147.5      ],\n",
-      "         [196.75     , 178.75     , 155.25     ],\n",
-      "         [206.75     , 189.75     , 158.25     ],\n",
-      "         ...,\n",
-      "         [179.5      , 156.75     , 131.       ],\n",
-      "         [131.       , 116.       ,  85.       ],\n",
-      "         [162.       , 142.5      , 109.25     ]],\n",
-      "\n",
-      "        [[207.       , 188.75     , 167.75     ],\n",
-      "         [175.       , 158.       , 132.       ],\n",
-      "         [189.       , 169.75     , 152.       ],\n",
-      "         ...,\n",
-      "         [182.5      , 155.75     , 124.25     ],\n",
-      "         [104.5      ,  85.75     ,  54.       ],\n",
-      "         [166.5      , 140.5      , 116.5      ]],\n",
-      "\n",
-      "        [[222.5      , 201.5      , 173.5      ],\n",
-      "         [205.75     , 187.25     , 161.75     ],\n",
-      "         [221.25     , 204.75     , 180.5      ],\n",
-      "         ...,\n",
-      "         [159.75     , 123.5      ,  90.       ],\n",
-      "         [177.25     , 144.25     , 113.25     ],\n",
-      "         [167.       , 140.       , 110.25     ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[195.5      , 150.       ,  96.5      ],\n",
-      "         [170.25     , 124.25     ,  74.25     ],\n",
-      "         [161.5      , 115.25     ,  67.       ],\n",
-      "         ...,\n",
-      "         [ 99.25     ,  71.       ,  47.25     ],\n",
-      "         [ 97.75     ,  76.25     ,  55.25     ],\n",
-      "         [ 31.75     ,  16.75     ,   3.       ]],\n",
-      "\n",
-      "        [[136.75     ,  99.       ,  55.75     ],\n",
-      "         [169.5      , 133.25     ,  90.5      ],\n",
-      "         [159.75     , 115.5      ,  67.5      ],\n",
-      "         ...,\n",
-      "         [153.75     , 133.25     , 104.       ],\n",
-      "         [118.5      ,  91.       ,  61.       ],\n",
-      "         [173.75     , 153.25     , 113.75     ]],\n",
-      "\n",
-      "        [[132.5      ,  97.25     ,  61.75     ],\n",
-      "         [113.       ,  79.       ,  44.75     ],\n",
-      "         [122.75     ,  79.75     ,  38.5      ],\n",
-      "         ...,\n",
-      "         [ 79.5      ,  51.25     ,  26.       ],\n",
-      "         [106.       ,  70.       ,  42.5      ],\n",
-      "         [127.25     ,  98.25     ,  61.75     ]]],\n",
-      "\n",
-      "\n",
-      "       [[[ 50.99707  ,  39.99707  ,  19.99707  ],\n",
-      "         [ 57.99414  ,  41.996094 ,  23.496094 ],\n",
-      "         [ 61.499023 ,  39.499023 ,  22.999023 ],\n",
-      "         ...,\n",
-      "         [ 60.501953 ,  44.501953 ,  31.501953 ],\n",
-      "         [ 53.5166   ,  37.5166   ,  24.516602 ],\n",
-      "         [ 61.993164 ,  47.993164 ,  34.993164 ]],\n",
-      "\n",
-      "        [[ 43.50586  ,  30.517578 ,  11.511719 ],\n",
-      "         [ 51.01758  ,  35.01758  ,  16.517578 ],\n",
-      "         [ 60.50879  ,  40.49707  ,  23.5      ],\n",
-      "         ...,\n",
-      "         [ 56.51172  ,  43.49414  ,  27.511719 ],\n",
-      "         [ 57.48535  ,  44.467773 ,  28.485352 ],\n",
-      "         [ 74.52051  ,  58.532227 ,  43.543945 ]],\n",
-      "\n",
-      "        [[ 50.495117 ,  35.495117 ,  16.495117 ],\n",
-      "         [ 50.01465  ,  33.01465  ,  15.014648 ],\n",
-      "         [ 57.504883 ,  37.504883 ,  20.504883 ],\n",
-      "         ...,\n",
-      "         [ 57.995117 ,  45.990234 ,  29.990234 ],\n",
-      "         [ 60.46582  ,  47.96582  ,  31.96582  ],\n",
-      "         [ 55.98535  ,  38.98535  ,  24.485352 ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[ 53.995117 ,  35.98535  ,  21.985352 ],\n",
-      "         [ 51.       ,  32.990234 ,  21.004883 ],\n",
-      "         [ 49.96582  ,  32.98047  ,  22.985352 ],\n",
-      "         ...,\n",
-      "         [ 28.985352 ,  21.490234 ,  10.980469 ],\n",
-      "         [ 25.009766 ,  19.509766 ,  10.990234 ],\n",
-      "         [ 26.529297 ,  22.53418  ,  16.009766 ]],\n",
-      "\n",
-      "        [[ 51.5      ,  32.5      ,  18.       ],\n",
-      "         [ 49.970703 ,  31.979492 ,  20.976562 ],\n",
-      "         [ 37.970703 ,  23.479492 ,  15.4765625],\n",
-      "         ...,\n",
-      "         [ 32.51465  ,  25.514648 ,  13.014648 ],\n",
-      "         [ 30.520508 ,  25.520508 ,  14.020508 ],\n",
-      "         [ 27.49121  ,  23.99121  ,  13.991211 ]],\n",
-      "\n",
-      "        [[ 46.489258 ,  28.99121  ,  13.990234 ],\n",
-      "         [ 33.498047 ,  20.498047 ,   7.998047 ],\n",
-      "         [ 24.5      ,  16.5      ,   8.       ],\n",
-      "         ...,\n",
-      "         [ 35.999023 ,  29.       ,  15.49707  ],\n",
-      "         [ 35.998047 ,  30.998047 ,  18.998047 ],\n",
-      "         [ 22.49707  ,  19.49707  ,   7.9970703]]],\n",
-      "\n",
-      "\n",
-      "       [[[135.00586  , 128.00586  , 135.00586  ],\n",
-      "         [126.66211  , 119.66211  , 126.66211  ],\n",
-      "         [129.74902  , 122.91504  , 129.41699  ],\n",
-      "         ...,\n",
-      "         [141.08301  , 131.08301  , 139.08301  ],\n",
-      "         [138.91699  , 128.91699  , 133.41699  ],\n",
-      "         [125.413086 , 123.24707  , 125.24707  ]],\n",
-      "\n",
-      "        [[124.74512  , 117.74512  , 124.74512  ],\n",
-      "         [135.77051  , 128.77051  , 135.77051  ],\n",
-      "         [172.02734  , 166.52734  , 165.02734  ],\n",
-      "         ...,\n",
-      "         [125.       , 115.       , 123.       ],\n",
-      "         [126.25879  , 119.50391  , 125.00586  ],\n",
-      "         [135.26074  , 128.76074  , 134.26074  ]],\n",
-      "\n",
-      "        [[140.66016  , 133.66016  , 140.66016  ],\n",
-      "         [133.23535  , 126.23535  , 133.23535  ],\n",
-      "         [131.10449  , 124.274414 , 130.76465  ],\n",
-      "         ...,\n",
-      "         [130.       , 120.       , 128.       ],\n",
-      "         [117.16016  , 113.990234 , 121.32031  ],\n",
-      "         [130.51953  , 119.60449  , 129.76465  ]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[111.53906  , 107.04883  , 110.87891  ],\n",
-      "         [117.03906  , 112.54883  , 116.37891  ],\n",
-      "         [112.15039  , 110.23535  , 115.23535  ],\n",
-      "         ...,\n",
-      "         [130.28418  , 121.28418  , 125.28418  ],\n",
-      "         [135.59473  , 129.09473  , 135.09473  ],\n",
-      "         [123.39551  , 116.39551  , 123.39551  ]],\n",
-      "\n",
-      "        [[100.98633  ,  99.98633  , 107.48828  ],\n",
-      "         [103.76074  , 102.76074  , 110.262695 ],\n",
-      "         [106.98047  , 106.98047  , 111.48047  ],\n",
-      "         ...,\n",
-      "         [148.76074  , 139.76074  , 140.76074  ],\n",
-      "         [147.4668   , 137.9668   , 144.9668   ],\n",
-      "         [121.00781  , 111.00781  , 119.00781  ]],\n",
-      "\n",
-      "        [[102.50195  ,  96.50195  , 104.00195  ],\n",
-      "         [104.5      , 101.5      , 108.5      ],\n",
-      "         [120.75293  , 116.25293  , 125.75293  ],\n",
-      "         ...,\n",
-      "         [148.24512  , 132.24512  , 136.74512  ],\n",
-      "         [119.08496  , 116.08496  , 122.58496  ],\n",
-      "         [120.671875 , 109.83789  , 114.75488  ]]]], dtype=float32)>, <tf.Tensor: shape=(32,), dtype=int32, numpy=\n",
-      "array([ 9,  4, 10,  2,  5, 12,  9,  4,  0,  6,  9,  6, 12,  4, 11, 12,  2,\n",
-      "        1,  2,  2,  9,  5,  8, 11,  1,  6,  8,  9,  5,  7, 10,  6],\n",
-      "      dtype=int32)>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(iter(train_ds)))"
    ]
