--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
     "            keras.layers.RandomZoom(0.1),\n",
     "            keras.layers.RandomContrast(0.01),\n",
     "            keras.layers.Rescaling(1./255),\n",
+    "            keras.layers.Resizing(224, 224),\n",
     "            keras.layers.Normalization(\n",
     "                mean=(0.485, 0.456, 0.406), \n",
     "                variance=(0.229, 0.224, 0.225)\n",
-    "            ),\n",
-    "            keras.layers.Resizing(224, 224)\n",
+    "            )\n",
     "        ])\n",
     "\n",
     "        self.split = split\n",
@@ -59,6 +59,9 @@
     "\n",
     "        all_files = []\n",
     "        for root, _, files in os.walk(self.data_folder):\n",
+    "            ext = os.path.splitext(files[0])[1]\n",
+    "            if ext not in [\".jpg\", \".jpeg\", \".png\"]:\n",
+    "                continue\n",
     "            subfolder = os.path.basename(root)\n",
     "            for file in files:\n",
     "                all_files.append({\n",
